Updates from Overleaf

--- a/Paper/references.bib
+++ b/Paper/references.bib
@@ -59,3 +59,149 @@
     title = {Methods for Synthesizing Very High Q Parametrically Well Behaved Two Pole Filters},
     year = {2003}
 }
+
+@article{arbel2017wine,
+  title={Wine glass sound excitation by mechanical coupling to plucked strings},
+  author={Arbel, Lior and Schechner, Yoav Y and Amir, Noam},
+  journal={Applied Acoustics},
+  volume={124},
+  pages={1--10},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@article{courtois2008tuning,
+  title={Tuning the pitch of a wine glass by playing with the liquid inside},
+  author={Courtois, Matthieu and Guirao, Boris and Fort, Emmanuel},
+  journal={European journal of physics},
+  volume={29},
+  number={2},
+  pages={303},
+  year={2008},
+  publisher={IOP Publishing}
+}
+
+@article{jundt2006vibrational,
+  title={Vibrational modes of partly filled wine glasses},
+  author={Jundt, Gregor and Radu, Adrian and Fort, Emmanuel and Duda, Jan and Vach, Holger and Fletcher, Neville},
+  journal={The Journal of the Acoustical Society of America},
+  volume={119},
+  number={6},
+  pages={3793--3798},
+  year={2006},
+  publisher={Acoustical Society of America}
+}
+
+@article{apfel1982whispering,
+  title={``Whispering'' waves in a wine glass},
+  author={Apfel, Robert E},
+  journal={The Journal of the Acoustical Society of America},
+  volume={72},
+  number={S1},
+  pages={S106--S106},
+  year={1982},
+  publisher={Acoustical Society of America}
+}
+
+@article{rossing1990wine,
+  title={Wine glasses, bell modes, and Lord Rayleigh},
+  author={Rossing, Thomas D},
+  journal={The Physics Teacher},
+  volume={28},
+  number={9},
+  pages={582--585},
+  year={1990},
+  publisher={American Association of Physics Teachers}
+}
+
+@article{chen2005does,
+  title={Why does water change the pitch of a singing wineglass the way it does?},
+  author={Chen, Yih-Yuh},
+  journal={American journal of physics},
+  volume={73},
+  number={11},
+  pages={1045--1049},
+  year={2005},
+  publisher={American Association of Physics Teachers}
+}
+
+@article{french1983vino,
+  title={In vino veritas: A study of wineglass acoustics},
+  author={French, AP},
+  journal={American Journal of Physics},
+  volume={51},
+  number={8},
+  pages={688--694},
+  year={1983},
+  publisher={American Association of Physics Teachers}
+}
+
+@article{piacsek2015glass,
+  title={A glass half full: Demonstrations of some surprising effects of fluid loading on the resonance of wine glasses (and other vessels)},
+  author={Piacsek, Andrew A},
+  journal={The Journal of the Acoustical Society of America},
+  volume={137},
+  number={4},
+  pages={2412--2412},
+  year={2015},
+  publisher={Acoustical Society of America}
+}
+
+@article{thines2012wine,
+  title={Wine glass resonance experiment and demonstration},
+  author={Thines, Benjamin C},
+  journal={The Journal of the Acoustical Society of America},
+  volume={132},
+  number={3},
+  pages={1891--1891},
+  year={2012},
+  publisher={Acoustical Society of America}
+}
+
+
+@misc{russelBEER,
+author = {Daniel A. Russel},
+title = {Vibrational Behavior of an Empty Beer Bottle},
+year = {2006},
+howpublished = {\url{https://www.acs.psu.edu/drussell/Demos/BeerBottle/beerbottle.html}}
+}
+
+@article{bragg1921world,
+  title={The world of Sound},
+  author={Bragg, William},
+  journal={Bell and Sons LTD},
+  year={1921}
+}
+
+@article{crawford1982hot,
+  title={The hot chocolate effect},
+  author={Crawford, Frank S},
+  journal={American Journal of Physics},
+  volume={50},
+  number={5},
+  pages={398--404},
+  year={1982},
+  publisher={American Association of Physics Teachers}
+}
+
+@article{morrison2002sound,
+  title={Sound of a cup with and without instant coffee},
+  author={Morrison, Andrew and Rossing, Thomas D},
+  journal={The Journal of the Acoustical Society of America},
+  volume={111},
+  number={5},
+  pages={2394--2394},
+  year={2002},
+  publisher={Acoustical Society of America}
+}
+
+@article{morrison2014acoustics,
+  title={Acoustics concepts you can demonstrate with a coffee mug},
+  author={Morrison, Andrew C},
+  journal={The Journal of the Acoustical Society of America},
+  volume={135},
+  number={4},
+  pages={2250--2250},
+  year={2014},
+  publisher={Acoustical Society of America}
+}
